<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grad"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="279dp"
        android:layout_height="184dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toTopOf="@+id/textViewEstatura"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitulo"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/textViewTitulo" />

    <TextView
        android:id="@+id/textViewEstatura"
        android:layout_width="188dp"
        android:layout_height="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/estatura"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/etEstatura"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitulo"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="@+id/textViewTitulo" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edittext_border"
        android:ems="3"
        android:hint="@string/kilosHint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent2"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewKilos"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeso" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calcular"
        android:textColor="@color/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewEstatura"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/textViewEstatura"
        app:layout_constraintTop_toBottomOf="@+id/textViewEstatura"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/etEstatura"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/edittext_border"
        android:ems="3"
        android:hint="@string/metrosHint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent2"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPeso"
        app:layout_constraintEnd_toStartOf="@+id/textViewMetros"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEstatura" />

    <TextView
        android:id="@+id/textViewPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/peso"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMetros"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="@+id/etEstatura"
        app:layout_constraintTop_toBottomOf="@+id/textViewMetros" />

    <TextView
        android:id="@+id/textViewKilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="164dp"
        android:text="@string/kilos"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewMetros"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeso" />

    <TextView
        android:id="@+id/textViewMetros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:text="@string/metros"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIMC"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:text="@string/imc"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewResultado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPeso"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:ems="50"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKilos" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="272dp"
        android:text="@string/title_activity_main"
        android:textColor="@color/colorAccent"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewMetros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>